@@ -5,15 +5,15 @@ AUX pidof-bsd-20050501-darwin.patch 5236 RMD160 80984c308ffec6cfa5edf2dc225f544b
 AUX pidof-bsd-20050501-firstarg.patch 485 RMD160 5959417c6ac48e808cf77d27bc4b91690c7d8523 SHA1 a194e8c0c4d702e796a7440ef07dde23f27e77dd SHA256 40bc0e215cce2b963c949bc84ac615970d10dd5f6e820a2bb826b5307ee9aee3
 AUX pidof-bsd-20050501-gfbsd.patch 2898 RMD160 e62fa1d1c714014b51be61b95e2e599c92ec1622 SHA1 6afdce1e965a57b4cc8b28f09658ae5687974540 SHA256 333984dcdfe27db0478e168366ee31449e5b457764530a840908890d31a688eb
 AUX pidof-bsd-20050501-netbsd.patch 1609 RMD160 b0a5d572a98130bfa4f4f9169995d3c6617d5e0d SHA1 a0e03b99755491c06f1d9998084f2f2bde6220d8 SHA256 8ee55747a74e5f2ece266a988d539b67cfcbfc08d6b3df60e65421a1f43f8193
-AUX pidof-bsd-20050501-pname.patch 1370 RMD160 490404791ad2c421b9e829bcb5f6a196982f27df SHA1 4049d6596c5f74fe1cd2ae269e4cc2959fb80c62 SHA256 730c1c2aedc15656809a6f76838e0ec98110cb266cd6157b6ab87eaf10915d05
+AUX pidof-bsd-20050501-pname.patch 1374 RMD160 48fa60d17fd607cd9ca284939d74f6db995fa7df SHA1 5d58351d06f842cc52a0cad452fba9729a93c0e1 SHA256 04fdaa9de91dafa6fc1e12443e30ec532315f74cfdffcf074fd5d8583ec322fe
 DIST pidof-bsd-20050501.tar.gz 1769 RMD160 1306e7f4b2d6231358d10b45705a16c925bb1d51 SHA1 408cf9d2ff486acb8e90de4fdec138554fd71868 SHA256 c3ed8826178debe872f7717b8810d477d4611ab19af73bed97c5af1c552d20e6
-EBUILD pidof-bsd-20050501-r3.ebuild 1057 RMD160 9c2cce29e2c805b2e89867cd056f01617ca3510d SHA1 6b2a08d58870c29c71bc5261ada83ec38a565314 SHA256 35da1f9a5f2984157997f893888f87e27ee1bbc3a5be1252cc0ef9408b420965
-MISC ChangeLog 1665 RMD160 3ff564a292c79d6d09e28b36374ad1500fb18581 SHA1 09d2224ca075019aabacdd29010a1c9885cf7d7c SHA256 f2bc9396142a9b4901cffc87d7d9d1299965e0d241090c8ee8fa4196e7f94488
+EBUILD pidof-bsd-20050501-r4.ebuild 1053 RMD160 2f50eed8062933e64770050317bcf4ce7ad8b3ff SHA1 811913946d09910e71d22051fa405082a60092d1 SHA256 8165018fdba39e23e406ed432accb40ffebd9462929a6cb5eef7a333578375f6
+MISC ChangeLog 1902 RMD160 8d264fd93a8f9f6f18529dce90b1818cd236df7e SHA1 c4f424e9414d5cea0d313cf8439305b692ad0545 SHA256 f5cf49b1ada8d7dd30d7041f523751bf67b47bc873c70d73fc46625feea7b9a8
 MISC metadata.xml 156 RMD160 60b5820a08275f307e5bd936d78f5afd1f141086 SHA1 d9d9d4f2b5afc58339ea3e562fca490156935f1f SHA256 30ab515d6ac492d3d6c36ac3c675511742c2149e56a6b3228c8d22ab8edb3ff7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/A69EACgkQX3X2B8XHTok8cgCfeytSrFHI/Z1Ih8Yz8QVRCxcg
-GPoAoJ9H25HYsU/GovTP/WLtCIbv2+nT
-=Klv4
+iEYEARECAAYFAk/CGmMACgkQX3X2B8XHTolaLgCghW4ik6jCX8bNeA/EwoyIZOtN
+kLoAnA9SxfaUxL2bZxtTLK+SrYysnpPP
+=lH6T
 -----END PGP SIGNATURE-----
