@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/pidof-bsd/pidof-bsd-20050501-r3.ebuild,v 1.6 2012/04/26 14:27:02 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/pidof-bsd/pidof-bsd-20050501-r4.ebuild,v 1.1 2012/05/24 13:10:40 ryao Exp $
 
 inherit base toolchain-funcs
 
