@@ -1,6 +1,12 @@
 # ChangeLog for sys-process/pidof-bsd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/pidof-bsd/ChangeLog,v 1.9 2012/04/26 14:27:02 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/pidof-bsd/ChangeLog,v 1.10 2012/05/24 13:10:40 ryao Exp $
+
+*pidof-bsd-20050501-r4 (24 May 2012)
+
+  24 May 2012; Richard Yao <ryao@gentoo.org> +pidof-bsd-20050501-r4.ebuild,
+  -pidof-bsd-20050501-r3.ebuild, files/pidof-bsd-20050501-pname.patch:
+  Fix patch to avoid undefined behavior, bug \#417181
 
   26 Apr 2012; Alexis Ballier <aballier@gentoo.org>
   pidof-bsd-20050501-r3.ebuild:
